--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  # Nginx Reverse Proxy with IP whitelisting
+  # Nginx Reverse Proxy with extended timeouts
   nginx:
     build: ./nginx
     container_name: devstral-nginx
@@ -26,7 +26,7 @@ services:
           memory: 512M
     restart: unless-stopped
 
-  # Ollama CUDA Server with Devstral:24b permanently loaded
+  # Ollama CUDA Server with Conservative Memory Settings
   ollama:
     build:
       context: ./ollama
@@ -41,18 +41,21 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
       - OLLAMA_HOST=0.0.0.0
       - OLLAMA_MODEL=${OLLAMA_MODEL:-devstral:24b}
-      - OLLAMA_KEEP_ALIVE=-1              # Keep model permanently in memory
+      - OLLAMA_KEEP_ALIVE=30m              # Keep for 30min instead of forever
       - OLLAMA_NUM_PARALLEL=1
       - OLLAMA_MAX_LOADED_MODELS=1
-      # Hybrid GPU+CPU configuration for RTX 3060 Ti
-      - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS:-15}
-      - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD:-8}
+      # Conservative GPU+CPU configuration for RTX 3060 Ti
+      - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS:-12}  # Reduced from 15
+      - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD:-10}  # Increased CPU threads
       - CUDA_VISIBLE_DEVICES=0
       - OLLAMA_MAIN_GPU=0
       # Memory and performance optimization
       - OLLAMA_FLASH_ATTENTION=${OLLAMA_FLASH_ATTENTION:-1}
       - OLLAMA_LOW_VRAM=${OLLAMA_LOW_VRAM:-1}
       - OLLAMA_ROPE_SCALING=${OLLAMA_ROPE_SCALING:-1}
+      # Additional memory constraints
+      - OLLAMA_CONTEXT_SIZE=16384           # Reduced context size
+      - OLLAMA_BATCH_SIZE=128               # Smaller batches
     ports:
       - "11434:11434"
     networks:
@@ -60,11 +63,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '8.0'                     # Use 8 of your 10 cores
-          memory: ${OLLAMA_MEMORY_LIMIT:-26G}
+          cpus: '10.0'                      # Use more CPU cores
+          memory: ${OLLAMA_MEMORY_LIMIT:-24G}  # Reduced from 26G
         reservations:
-          cpus: '4.0'
-          memory: ${OLLAMA_MEMORY_RESERVATION:-16G}
+          cpus: '6.0'                       # Increased CPU reservation
+          memory: ${OLLAMA_MEMORY_RESERVATION:-12G}  # Reduced from 16G
           devices:
             - driver: nvidia
               count: 1
@@ -78,7 +81,7 @@ services:
       retries: 3
       start_period: 300s                  # Give time for initial model download
 
-  # Quart Web Application
+  # Quart Web Application with extended timeouts
   quart-app:
     build:
       context: ./quart-app
@@ -93,16 +96,16 @@ services:
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin123}
       - MODEL_TEMPERATURE=${MODEL_TEMPERATURE:-0.7}
       - MODEL_TOP_P=${MODEL_TOP_P:-0.9}
-      - MODEL_MAX_TOKENS=${MODEL_MAX_TOKENS:-4096}
-      - MODEL_TIMEOUT=${MODEL_TIMEOUT:-300}
-      - RATE_LIMIT_MESSAGES_PER_MINUTE=${RATE_LIMIT_MESSAGES_PER_MINUTE:-8}
+      - MODEL_MAX_TOKENS=${MODEL_MAX_TOKENS:-2048}  # Reduced from 4096
+      - MODEL_TIMEOUT=${MODEL_TIMEOUT:-180}         # Reduced from 300s
+      - RATE_LIMIT_MESSAGES_PER_MINUTE=${RATE_LIMIT_MESSAGES_PER_MINUTE:-5}  # More conservative
       - CHAT_CACHE_TTL_SECONDS=${CHAT_CACHE_TTL_SECONDS:-7200}
-      - CHAT_HISTORY_LIMIT=${CHAT_HISTORY_LIMIT:-50}
+      - CHAT_HISTORY_LIMIT=${CHAT_HISTORY_LIMIT:-30}  # Reduced context
       - SESSION_LIFETIME_DAYS=${SESSION_LIFETIME_DAYS:-7}
       - SECURE_COOKIES=${SECURE_COOKIES:-false}
       # SSE Configuration
       - SSE_HEARTBEAT_INTERVAL=${SSE_HEARTBEAT_INTERVAL:-30}
-      - SSE_MAX_CONNECTIONS=${SSE_MAX_CONNECTIONS:-25}
+      - SSE_MAX_CONNECTIONS=${SSE_MAX_CONNECTIONS:-15}  # Reduced connections
       - SSE_RETRY_TIMEOUT=${SSE_RETRY_TIMEOUT:-5000}
     volumes:
       # Persistent volume for application data
@@ -121,10 +124,10 @@ services:
       resources:
         limits:
           cpus: '2.0'
-          memory: ${QUART_APP_MEMORY_LIMIT:-4G}
+          memory: ${QUART_APP_MEMORY_LIMIT:-3G}  # Reduced from 4G
         reservations:
           cpus: '1.0'
-          memory: ${QUART_APP_MEMORY_RESERVATION:-2G}
+          memory: ${QUART_APP_MEMORY_RESERVATION:-1G}  # Reduced from 2G
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -149,10 +152,10 @@ services:
       resources:
         limits:
           cpus: '1.0'
-          memory: ${REDIS_MEMORY_LIMIT:-2G}
+          memory: ${REDIS_MEMORY_LIMIT:-1G}  # Reduced from 2G
         reservations:
           cpus: '0.25'
-          memory: 512M
+          memory: 256M
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
