--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Configuration with chunked responses and IP whitelisting
+# nginx/nginx.conf - Configuration with EXTENDED timeouts for AI responses
 
 user nginx;
 worker_processes auto;
@@ -33,10 +33,10 @@ http {
     server_tokens off;
     client_max_body_size 10M;
 
-    # Timeouts for AI model responses
-    proxy_connect_timeout 600s;
-    proxy_send_timeout 600s;
-    proxy_read_timeout 600s;
+    # EXTENDED timeouts for AI model responses (3x longer)
+    proxy_connect_timeout 180s;           # Increased from 60s
+    proxy_send_timeout 900s;              # Increased from 600s (15 minutes)
+    proxy_read_timeout 900s;              # Increased from 600s (15 minutes)
     
     # Trust Cloudflare IPs for real IP detection
     set_real_ip_from 103.21.244.0/22;
@@ -83,10 +83,10 @@ http {
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'none'" always;
 
-    # Rate Limiting Zones
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=60r/m;
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
-    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=10r/m;
+    # Rate Limiting Zones (more conservative)
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;   # Reduced from 60r/m
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=3r/m;      # Reduced from 5r/m
+    limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=5r/m;       # Reduced from 10r/m
     limit_req_status 429;
 
     # IP Whitelisting Configuration
@@ -141,10 +141,10 @@ http {
             return 403;
         }
         
-        # Chat chunked response endpoint - NO BUFFERING
+        # Chat chunked response endpoint - EXTENDED TIMEOUTS
         location /chat {
             # Only for POST requests (form submissions)
-            limit_req zone=chat_limit burst=3 nodelay;
+            limit_req zone=chat_limit burst=2 nodelay;  # Reduced burst
             
             proxy_pass http://quart-app:8000/chat;
             proxy_set_header Host $host;
@@ -161,15 +161,15 @@ http {
             proxy_set_header Connection "";
             proxy_http_version 1.1;
             
-            # Extended timeouts for AI responses
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 600s;
-            proxy_read_timeout 600s;
+            # MASSIVELY extended timeouts for AI responses
+            proxy_connect_timeout 180s;   # 3 minutes to connect
+            proxy_send_timeout 900s;      # 15 minutes to send
+            proxy_read_timeout 900s;      # 15 minutes to read response
         }
         
         # Authentication endpoints with strict rate limiting
         location ~ ^/(login|register|logout)$ {
-            limit_req zone=login_limit burst=3 nodelay;
+            limit_req zone=login_limit burst=2 nodelay;  # Reduced burst
             
             proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
@@ -180,7 +180,7 @@ http {
         
         # All other requests go to Quart (templates, forms, etc.)
         location / {
-            limit_req zone=general_limit burst=10 nodelay;
+            limit_req zone=general_limit burst=5 nodelay;  # Reduced burst
             
             proxy_pass http://quart-app:8000;
             proxy_set_header Host $host;
@@ -190,8 +190,8 @@ http {
             
             # Standard timeouts
             proxy_connect_timeout 60s;
-            proxy_send_timeout 600s;
-            proxy_read_timeout 600s;
+            proxy_send_timeout 180s;      # Slightly increased
+            proxy_read_timeout 180s;      # Slightly increased
         }
         
         # Health check endpoint (no rate limiting)
